fixed CSS problem alignment problem

--- a/public/styles/media-query.css
+++ b/public/styles/media-query.css
@@ -4,6 +4,11 @@
     padding: 1.5rem 1rem;
   }
 
+  .routes-container-nlg {
+    overflow-x: hidden;
+    padding: 1rem 1rem;
+  }
+  
   .signup-btn, .login-btn {
     width: 13.5rem;
   }
@@ -19,7 +24,7 @@
     width: 100%;
     padding: 2rem 0;
   }
-
+  
   .form-container {
     display: flex;
     justify-content: center;
